--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
             Error Message: <span id="errorMsg"></span>
         </form>
     </div>
-
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="lib/jquery-ui/jquery-ui.min.js"></script>
+    <!--<script type="text/javascript" src="lib/jquery-ui/jquery-ui.min.js"></script>-->
     <script type="text/javascript" src="lib/emily/kanban/Board.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/Column.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/Ticket.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="app-test.js"></script>
+    <!--<script type="text/javascript" src="lib/emily/kanban/dragAndDrop.js"></script>-->
+    <!--<script type="text/javascript" src="dragDropScript.js"></script>-->
 </body>
 </html>
