--- a/index.html
+++ b/index.html
@@ -26,12 +26,9 @@
         </form>
     </div>
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
-    <!--<script type="text/javascript" src="lib/jquery-ui/jquery-ui.min.js"></script>-->
     <script type="text/javascript" src="lib/emily/kanban/Board.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/Column.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/Ticket.js"></script>
-    <script type="text/javascript" src="app-test.js"></script>
-    <!--<script type="text/javascript" src="lib/emily/kanban/dragAndDrop.js"></script>-->
-    <!--<script type="text/javascript" src="dragDropScript.js"></script>-->
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
