--- a/index.html
+++ b/index.html
@@ -10,20 +10,33 @@
 <body>
     <div id="wrap">
         <div id="container">
+            <div id="vidBg">
+                <video autoplay muted="muted" loop>
+                    <source src="videos/duck.mp4" type="video/mp4">
+                    Your browser does not support HTML5 videos. Please update your browser.
+                </video>
+            </div>
         </div>
-        <form>
-            Ticket Title: <input type="text" name="ticket_title">
-            <br>
-            Ticket Description: <input type="text" name="ticket_description">
-            <br>
-            Destination Column Title: <input type="text" name="column_title" placeholder="New ticket goes to To Do">
-            <br>
-            <button id="create_a_ticket">Create A Ticket</button>
-            <button id="move_ticket">Move this Ticket</button>
-            <button id="delete_ticket">Delete this Ticket from Done</button>
-            <br>
-            Error Message: <span id="errorMsg"></span>
-        </form>
+        <div id="forms">
+            <form id="form_ticket">
+                Ticket Title: <input type="text" name="ticket_title">
+                <br>
+                Ticket Description: <input type="text" name="ticket_description">
+                <br>
+                Destination Column Title: <input type="text" name="column_title" placeholder="New ticket goes to To Do">
+                <br>
+                <button id="create_a_ticket">Create A Ticket</button>
+                <button id="move_ticket">Move this Ticket</button>
+                <button id="delete_ticket">Delete this Ticket from Done</button>
+                <br>
+                Error Message: <span id="errorMsg"></span>
+                <!--<br>
+                Edit Description: <input type="text" name="new_description">
+                <button id="change_description">Change Description</button>-->
+            </form>
+            <form id="form_edit">
+            </form>
+        </div>
     </div>
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/Board.js"></script>
