everything works at the point including animated bin

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!--<form id="form_edit">
             </form>-->
             <div id="bin">
-                <i id="icon" class="fa fa-trash-o"></i>
+                <i id="icon_bin" class="fa fa-trash-o"></i>
             </div>
         </div>
     </div>
