--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div id="wrap">
         <div id="container">
             <div id="vidBg">
-                <video autoplay muted="muted" loop>
-                    <source src="videos/duck.mp4" type="video/mp4">
+                <video autoplay src="videos/duck.mp4" type="video/mp4" muted="muted" loop>
+                    <!--<source src="videos/duck.mp4" type="video/mp4">-->
                     Your browser does not support HTML5 videos. Please update your browser.
                 </video>
             </div>
@@ -42,6 +42,10 @@
             <div id="bin">
                 <i id="icon_bin" class="fa fa-trash-o"></i>
             </div>
+            <!--<form id="upload">
+            </form>-->
+            <input type="file" id="fileWindowOpen" accept="image/*">
+            <button id="dltBgImg">Delete background image</button>
         </div>
     </div>
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
