--- a/index.html
+++ b/index.html
@@ -20,36 +20,40 @@
                 </video>-->
             </div>
         </div>
-        <div id="forms">
-            <form id="form_ticket">
-                Ticket Title: <input type="text" name="ticket_title">
-                <br>
-                Ticket Description: <input type="text" name="ticket_description">
-                <br>
-                Destination Column Title: <input type="text" name="column_title" placeholder="New ticket goes to To Do">
-                <br>
-                <button id="create_a_ticket">Create A Ticket</button>
-                <button id="move_ticket">Move this Ticket</button>
-                <button id="delete_ticket">Delete this Ticket from Done</button>
-                <button id="clear_ticket">Clear all tickets</button>
-                <br>
-                Error Message: <span id="errorMsg"></span>
-                <!--<br>
-                Edit Description: <input type="text" name="new_description">
-                <button id="change_description">Change Description</button>-->
-            </form>
-            <!--<form id="form_edit">
-            </form>-->
+        <div id="control">
+            <div id="control_sections">
+                <form id="form_ticket">
+                    Ticket Title: <input type="text" name="ticket_title">
+                    <br>
+                    Ticket Description: <input type="text" name="ticket_description">
+                    <br>
+                    Destination Column Title: <input type="text" name="column_title" placeholder="New ticket goes to To Do">
+                    <br>
+                    <button id="create_a_ticket">Create A Ticket</button>
+                    <button id="move_ticket">Move this Ticket</button>
+                    <button id="delete_ticket">Delete this Ticket from Done</button>
+                    <button id="clear_ticket">Clear all tickets</button>
+                    <br>
+
+
+                </form>
+
+                <div id="bgImage">
+                    <input type="file" id="selectFiles" accept="image/*">
+                    <label id="fileButton" for="selectFiles">Choose an image file or drag one from your computer and drop it on the board to change the background image.</label>
+                    <button id="dltBgImg">Delete background image</button>
+                </div>
+            </div>
+
             <div id="bin">
                 <i id="icon_bin" class="fa fa-trash-o"></i>
             </div>
-            <!--<form id="upload">
-            </form>-->
-            <input type="file" id="selectFiles" accept="image/*">
-            <label id="fileButton" for="selectFiles">Choose an image file from your computer as the board's background or drag an image file directly from your desktop and drop it on the board</label>
-            <!--<input type="file" id="fileWindowOpen" >-->
-            <button id="dltBgImg">Delete background image</button>
+
         </div>
+
+        <div id="errorMsg">
+        </div>
+
     </div>
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/LocalStorage.js"></script>
