--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <br>
                     Destination Column Title: <input type="text" name="column_title" placeholder="New ticket goes to To Do">
                     <br>
-                    <button id="create_a_ticket">Create A Ticket</button>
+                    <button id="create_a_ticket">Create a Ticket</button>
                     <button id="move_ticket">Move this Ticket</button>
                     <button id="delete_ticket">Delete this Ticket from Done</button>
                     <button id="clear_ticket">Clear all tickets</button>
