--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div id="bgImage">
                     <input type="file" id="selectFiles" accept="image/*">
                     <label id="fileButton" for="selectFiles">Choose an image file or drag one from your computer and drop it on the board to change the background.</label>
-                    <br>
+                    <!--<br>-->
                     <button id="dltBgImg">Delete background image</button>
                 </div>
             </div>
@@ -62,6 +62,7 @@
     <script type="text/javascript" src="lib/emily/kanban/Board.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/Column.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/Ticket.js"></script>
+    <script type="text/javascript" src="lib/emily/kanban/LocalStorageHandle.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
