--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     <script type="text/javascript" src="lib/emily/kanban/Column.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/Ticket.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/LocalStorageHandle.js"></script>
+
+    <script type="text/javascript" src="lib/emily/kanban/errMsg.js"></script>
+    <script type="text/javascript" src="lib/emily/kanban/dAndD.js"></script>
+
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
