--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 
     <script type="text/javascript" src="lib/emily/kanban/errMsg.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/dAndD.js"></script>
+    <script type="text/javascript" src="lib/emily/kanban/BgImgAction.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
+
 </body>
 </html>
