--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <script type="text/javascript" src="lib/emily/kanban/LocalStorageHandle.js"></script>
 
     <script type="text/javascript" src="lib/emily/kanban/errMsg.js"></script>
-    <script type="text/javascript" src="lib/emily/kanban/dAndD.js"></script>
+    <script type="text/javascript" src="lib/emily/kanban/DAndD.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/BgImgAction.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
