moved ticket handlers into an object

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <script type="text/javascript" src="lib/emily/kanban/errMsg.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/DAndD.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/BgImgAction.js"></script>
+    <script type="text/javascript" src="lib/emily/kanban/TicketHandler.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
 
