--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <script type="text/javascript" src="lib/emily/kanban/Ticket.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/LocalStorageHandle.js"></script>
 
-    <script type="text/javascript" src="lib/emily/kanban/errMsg.js"></script>
+    <script type="text/javascript" src="lib/emily/kanban/ErrMsg.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/Anime.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/DAndD.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/BgImgAction.js"></script>
