made renders into an object

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <script type="text/javascript" src="lib/emily/kanban/Ticket.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/LocalStorageHandle.js"></script>
 
+    <script type="text/javascript" src="lib/emily/kanban/Render.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/ErrMsg.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/Anime.js"></script>
     <script type="text/javascript" src="lib/emily/kanban/DAndD.js"></script>
