clean up commit part 2

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
     <div id="wrap">
         <div id="board_container">
             <div id="vidBg">
-                <!--<video autoplay src="videos/duck.mp4" muted="muted" loop>
-                    &lt;!&ndash;<source src="videos/duck.mp4" type="video/mp4">&ndash;&gt;
-                    Your browser does not support HTML5 videos. Please update your browser.
-                </video>-->
+
             </div>
         </div>
         <div id="control">
@@ -49,7 +46,7 @@
                 <div id="bgImage">
                     <input type="file" id="selectFiles" accept="image/*">
                     <label id="fileButton" for="selectFiles">Choose an image file or drag one from your computer and drop it on the board to change the background.</label>
-                    <!--<br>-->
+
                     <button id="dltBgImg">Delete background image</button>
                 </div>
             </div>
@@ -59,9 +56,7 @@
     </div>
     <script type="text/javascript" src="js/lib/jquery/dist/jquery.min.js"></script>
 
-    <!--<script type="text/javascript" src="production.min.js"></script>-->
-
-    <!-- dev //-->
+    <!-- build:js js/production.min.js -->
     <script type="text/javascript" src="js/emily/kanban/LocalStorage.js"></script>
     <script type="text/javascript" src="js/emily/kanban/Board.js"></script>
     <script type="text/javascript" src="js/emily/kanban/Column.js"></script>
@@ -74,7 +69,7 @@
     <script type="text/javascript" src="js/emily/kanban/DAndD.js"></script>
     <script type="text/javascript" src="js/emily/kanban/BgImgAction.js"></script>
     <script type="text/javascript" src="js/emily/kanban/TicketHandler.js"></script>
-    <!-- dev-end //-->
+    <!-- endbuild -->
 
     <script type="text/javascript" src="app.js"></script>
 
